// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v2 preset compile snapshots > apex compiles to a stable token set 1`] = `
{
  "dark": {
    "accent": "#38bdf8",
    "accentContent": "#0a0a0a",
    "base100": "#0b1120",
    "base200": "#111827",
    "base300": "#1b2538",
    "baseContent": "#e2e8f0",
    "border": "#1f2937",
    "danger": "#f87171",
    "dangerContent": "#0a0a0a",
    "info": "#38bdf8",
    "infoContent": "#0a0a0a",
    "neutral": "#e2e8f0",
    "neutralContent": "#0a0a0a",
    "primary": "#5b57ef",
    "primaryContent": "#ffffff",
    "secondary": "#2dd4bf",
    "secondaryContent": "#0a0a0a",
    "success": "#4ade80",
    "successContent": "#0a0a0a",
    "warning": "#fbbf24",
    "warningContent": "#0a0a0a",
  },
  "light": {
    "accent": "#0ea5e9",
    "accentContent": "#0a0a0a",
    "base100": "#ffffff",
    "base200": "#f8fafc",
    "base300": "#eef2f7",
    "baseContent": "#0f172a",
    "border": "#e2e8f0",
    "danger": "#dc2626",
    "dangerContent": "#ffffff",
    "info": "#0284c7",
    "infoContent": "#0a0a0a",
    "neutral": "#0f172a",
    "neutralContent": "#ffffff",
    "primary": "#4f46e5",
    "primaryContent": "#ffffff",
    "secondary": "#14b8a6",
    "secondaryContent": "#0a0a0a",
    "success": "#16a34a",
    "successContent": "#0a0a0a",
    "warning": "#d97706",
    "warningContent": "#0a0a0a",
  },
  "shared": {
    "borderWidth": "1px",
    "containerWidth": "medium",
    "depth": 1,
    "fontBody": "Inter",
    "fontHeading": "Inter",
    "radiusBox": "0.5rem",
    "radiusField": "0.375rem",
    "radiusSelector": "9999px",
    "sizeField": "2.75rem",
    "sizeSelector": "2rem",
    "spaceBase": "0.25rem",
  },
}
`;

exports[`v2 preset compile snapshots > drift compiles to a stable token set 1`] = `
{
  "dark": {
    "accent": "#c9a27e",
    "accentContent": "#0a0a0a",
    "base100": "#141414",
    "base200": "#1c1c1c",
    "base300": "#262626",
    "baseContent": "#f0f0f0",
    "border": "#2a2a2a",
    "danger": "#f87171",
    "dangerContent": "#0a0a0a",
    "info": "#38bdf8",
    "infoContent": "#0a0a0a",
    "neutral": "#f0f0f0",
    "neutralContent": "#0a0a0a",
    "primary": "#f5f5f5",
    "primaryContent": "#111111",
    "secondary": "#9ca3af",
    "secondaryContent": "#0a0a0a",
    "success": "#4ade80",
    "successContent": "#0a0a0a",
    "warning": "#fbbf24",
    "warningContent": "#0a0a0a",
  },
  "light": {
    "accent": "#b08968",
    "accentContent": "#0a0a0a",
    "base100": "#fafafa",
    "base200": "#ffffff",
    "base300": "#f0ede8",
    "baseContent": "#1a1a1a",
    "border": "#e5e0d8",
    "danger": "#dc2626",
    "dangerContent": "#ffffff",
    "info": "#0284c7",
    "infoContent": "#0a0a0a",
    "neutral": "#1a1a1a",
    "neutralContent": "#ffffff",
    "primary": "#111111",
    "primaryContent": "#ffffff",
    "secondary": "#6b7280",
    "secondaryContent": "#ffffff",
    "success": "#16a34a",
    "successContent": "#0a0a0a",
    "warning": "#d97706",
    "warningContent": "#0a0a0a",
  },
  "shared": {
    "borderWidth": "1px",
    "containerWidth": "wide",
    "depth": 0.4,
    "fontBody": "Inter",
    "fontHeading": "Playfair Display",
    "radiusBox": "0px",
    "radiusField": "0px",
    "radiusSelector": "0px",
    "sizeField": "2.875rem",
    "sizeSelector": "2.125rem",
    "spaceBase": "0.28rem",
  },
}
`;

exports[`v2 preset compile snapshots > drop compiles to a stable token set 1`] = `
{
  "dark": {
    "accent": "#f472b6",
    "accentContent": "#0a0a0a",
    "base100": "#0c0a13",
    "base200": "#131019",
    "base300": "#1d1827",
    "baseContent": "#ededf0",
    "border": "#272233",
    "danger": "#f87171",
    "dangerContent": "#0a0a0a",
    "info": "#38bdf8",
    "infoContent": "#0a0a0a",
    "neutral": "#ededf0",
    "neutralContent": "#0a0a0a",
    "primary": "#7c3aed",
    "primaryContent": "#ffffff",
    "secondary": "#22d3ee",
    "secondaryContent": "#0a0a0a",
    "success": "#4ade80",
    "successContent": "#0a0a0a",
    "warning": "#fbbf24",
    "warningContent": "#0a0a0a",
  },
  "light": {
    "accent": "#ec4899",
    "accentContent": "#0a0a0a",
    "base100": "#ffffff",
    "base200": "#faf9fc",
    "base300": "#f3f0f7",
    "baseContent": "#18181b",
    "border": "#e4e4e7",
    "danger": "#dc2626",
    "dangerContent": "#ffffff",
    "info": "#0284c7",
    "infoContent": "#0a0a0a",
    "neutral": "#18181b",
    "neutralContent": "#ffffff",
    "primary": "#7c3aed",
    "primaryContent": "#ffffff",
    "secondary": "#06b6d4",
    "secondaryContent": "#0a0a0a",
    "success": "#16a34a",
    "successContent": "#0a0a0a",
    "warning": "#d97706",
    "warningContent": "#0a0a0a",
  },
  "shared": {
    "borderWidth": "1px",
    "containerWidth": "wide",
    "depth": 1.3,
    "fontBody": "Inter",
    "fontHeading": "Poppins",
    "radiusBox": "1rem",
    "radiusField": "0.625rem",
    "radiusSelector": "9999px",
    "sizeField": "2.875rem",
    "sizeSelector": "2.125rem",
    "spaceBase": "0.25rem",
  },
}
`;

exports[`v2 preset compile snapshots > fleet compiles to a stable token set 1`] = `
{
  "dark": {
    "accent": "#22d3ee",
    "accentContent": "#0a0a0a",
    "base100": "#0f172a",
    "base200": "#172033",
    "base300": "#1e293b",
    "baseContent": "#e2e8f0",
    "border": "#334155",
    "danger": "#f87171",
    "dangerContent": "#0a0a0a",
    "info": "#38bdf8",
    "infoContent": "#0a0a0a",
    "neutral": "#e2e8f0",
    "neutralContent": "#0a0a0a",
    "primary": "#2563eb",
    "primaryContent": "#ffffff",
    "secondary": "#06b6d4",
    "secondaryContent": "#0a0a0a",
    "success": "#4ade80",
    "successContent": "#0a0a0a",
    "warning": "#fbbf24",
    "warningContent": "#0a0a0a",
  },
  "light": {
    "accent": "#0891b2",
    "accentContent": "#0a0a0a",
    "base100": "#ffffff",
    "base200": "#f8fafc",
    "base300": "#eef2f7",
    "baseContent": "#0f172a",
    "border": "#cbd5e1",
    "danger": "#dc2626",
    "dangerContent": "#ffffff",
    "info": "#0284c7",
    "infoContent": "#0a0a0a",
    "neutral": "#0f172a",
    "neutralContent": "#ffffff",
    "primary": "#1d4ed8",
    "primaryContent": "#ffffff",
    "secondary": "#0e7490",
    "secondaryContent": "#ffffff",
    "success": "#16a34a",
    "successContent": "#0a0a0a",
    "warning": "#d97706",
    "warningContent": "#0a0a0a",
  },
  "shared": {
    "borderWidth": "1px",
    "containerWidth": "full",
    "depth": 0.5,
    "fontBody": "IBM Plex Sans",
    "fontHeading": "IBM Plex Sans",
    "radiusBox": "0.25rem",
    "radiusField": "0.25rem",
    "radiusSelector": "0.25rem",
    "sizeField": "2.5rem",
    "sizeSelector": "1.875rem",
    "spaceBase": "0.22rem",
  },
}
`;

exports[`v2 preset compile snapshots > industrial compiles to a stable token set 1`] = `
{
  "dark": {
    "accent": "#fbbf24",
    "accentContent": "#0a0a0a",
    "base100": "#0a0a0a",
    "base200": "#141414",
    "base300": "#1f1f22",
    "baseContent": "#fafafa",
    "border": "#27272a",
    "danger": "#f87171",
    "dangerContent": "#0a0a0a",
    "info": "#38bdf8",
    "infoContent": "#0a0a0a",
    "neutral": "#fafafa",
    "neutralContent": "#0a0a0a",
    "primary": "#dc2626",
    "primaryContent": "#ffffff",
    "secondary": "#64748b",
    "secondaryContent": "#ffffff",
    "success": "#4ade80",
    "successContent": "#0a0a0a",
    "warning": "#fbbf24",
    "warningContent": "#0a0a0a",
  },
  "light": {
    "accent": "#f59e0b",
    "accentContent": "#0a0a0a",
    "base100": "#ffffff",
    "base200": "#fafafa",
    "base300": "#f4f4f5",
    "baseContent": "#18181b",
    "border": "#d4d4d8",
    "danger": "#dc2626",
    "dangerContent": "#ffffff",
    "info": "#0284c7",
    "infoContent": "#0a0a0a",
    "neutral": "#18181b",
    "neutralContent": "#ffffff",
    "primary": "#cc1010",
    "primaryContent": "#ffffff",
    "secondary": "#475569",
    "secondaryContent": "#ffffff",
    "success": "#16a34a",
    "successContent": "#0a0a0a",
    "warning": "#d97706",
    "warningContent": "#0a0a0a",
  },
  "shared": {
    "borderWidth": "2px",
    "containerWidth": "wide",
    "depth": 0.6,
    "fontBody": "Inter",
    "fontHeading": "Oswald",
    "radiusBox": "0.125rem",
    "radiusField": "0.125rem",
    "radiusSelector": "0.125rem",
    "sizeField": "2.875rem",
    "sizeSelector": "2.125rem",
    "spaceBase": "0.25rem",
  },
}
`;

exports[`v2 preset compile snapshots > market compiles to a stable token set 1`] = `
{
  "dark": {
    "accent": "#84cc16",
    "accentContent": "#0a0a0a",
    "base100": "#1a1206",
    "base200": "#221608",
    "base300": "#2e2010",
    "baseContent": "#f5ecd9",
    "border": "#3a2a14",
    "danger": "#f87171",
    "dangerContent": "#0a0a0a",
    "info": "#38bdf8",
    "infoContent": "#0a0a0a",
    "neutral": "#f5ecd9",
    "neutralContent": "#0a0a0a",
    "primary": "#d97706",
    "primaryContent": "#1a1206",
    "secondary": "#c2410c",
    "secondaryContent": "#ffffff",
    "success": "#4ade80",
    "successContent": "#0a0a0a",
    "warning": "#fbbf24",
    "warningContent": "#0a0a0a",
  },
  "light": {
    "accent": "#65a30d",
    "accentContent": "#0a0a0a",
    "base100": "#fffdf7",
    "base200": "#fffdfa",
    "base300": "#f5ecd9",
    "baseContent": "#3a2e1f",
    "border": "#e7d8b8",
    "danger": "#dc2626",
    "dangerContent": "#ffffff",
    "info": "#0284c7",
    "infoContent": "#0a0a0a",
    "neutral": "#3a2e1f",
    "neutralContent": "#ffffff",
    "primary": "#b45309",
    "primaryContent": "#fffaf0",
    "secondary": "#9a3412",
    "secondaryContent": "#ffffff",
    "success": "#16a34a",
    "successContent": "#0a0a0a",
    "warning": "#d97706",
    "warningContent": "#0a0a0a",
  },
  "shared": {
    "borderWidth": "1px",
    "containerWidth": "medium",
    "depth": 1.1,
    "fontBody": "Nunito Sans",
    "fontHeading": "Fraunces",
    "radiusBox": "0.75rem",
    "radiusField": "0.5rem",
    "radiusSelector": "9999px",
    "sizeField": "2.75rem",
    "sizeSelector": "2rem",
    "spaceBase": "0.26rem",
  },
}
`;
